[gd_scene load_steps=12 format=3 uid="uid://trdgk7ggai0g"]

[ext_resource type="Script" path="res://Scripts/Debug/DebugConsole.gd" id="1_1x63u"]
[ext_resource type="Script" path="res://Scripts/Debug/DebugCommands.gd" id="3_v72jh"]
[ext_resource type="Resource" uid="uid://t11b8qcsj1hl" path="res://CustomResources/Runes/Blue/FireRune.tres" id="4_35fjo"]
[ext_resource type="Script" path="res://Scripts/Debug/ConsoleLineEdit.gd" id="5_ll82f"]
[ext_resource type="Resource" uid="uid://gtkgqi172xef" path="res://CustomResources/Runes/Blue/IceRune.tres" id="5_nienx"]
[ext_resource type="Resource" uid="uid://da8bwlukglmcu" path="res://CustomResources/Runes/Blue/ConditionRune.tres" id="6_tq0qn"]
[ext_resource type="Resource" uid="uid://dml2jw5po2uiy" path="res://CustomResources/Runes/Blue/CrateRune.tres" id="7_x77o1"]
[ext_resource type="Resource" uid="uid://bxiuikm8748d5" path="res://CustomResources/Runes/Red/DetrimentRune.tres" id="8_310vk"]
[ext_resource type="Resource" uid="uid://b5rf4kuktg21q" path="res://CustomResources/Runes/Red/BenefitRune.tres" id="9_25wja"]
[ext_resource type="Resource" uid="uid://cchhv8061mmxg" path="res://CustomResources/Runes/Yellow/GroundRune.tres" id="10_km4ss"]
[ext_resource type="Resource" uid="uid://ytqt7t0ak1ok" path="res://CustomResources/Runes/Yellow/SelfRune.tres" id="11_pnjhu"]

[node name="DebugConsole" type="Control" node_paths=PackedStringArray("line_edit", "console", "commandHolder")]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_1x63u")
line_edit = NodePath("MarginContainer/VBoxContainer/Input")
console = NodePath("MarginContainer/VBoxContainer/Console")
commandHolder = NodePath("CommandHolder")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 125.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Console" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="Input" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
drag_and_drop_selection_enabled = false
caret_blink = true
caret_force_displayed = true
caret_mid_grapheme = true
script = ExtResource("5_ll82f")

[node name="CommandHolder" type="Node" parent="."]
script = ExtResource("3_v72jh")
runes = [ExtResource("4_35fjo"), ExtResource("5_nienx"), ExtResource("6_tq0qn"), ExtResource("7_x77o1"), ExtResource("8_310vk"), ExtResource("9_25wja"), ExtResource("10_km4ss"), ExtResource("11_pnjhu")]

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Input" to="MarginContainer/VBoxContainer/Input" method="_on_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/Input" to="MarginContainer/VBoxContainer/Input" method="_on_focus_exited"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/Input" to="MarginContainer/VBoxContainer/Input" method="_on_gui_input"]
